<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/question_banner_text_size"
                android:layout_marginTop="@dimen/top_margins"
                android:text="@string/question1"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/q1a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a1"/>
                <CheckBox
                    android:id="@+id/q1a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/q1a1"
                    android:text="@string/q1a2"/>
                <CheckBox
                    android:id="@+id/q1a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/q1a1"
                    android:text="@string/q1a3"/>
                <CheckBox
                    android:id="@+id/q1a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/q1a2"
                    android:layout_toRightOf="@id/q1a3"
                    android:text="@string/q1a4"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/question_banner_text_size"
                android:layout_marginTop="@dimen/top_margins"
                android:text="@string/question2"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/q2a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a1"/>
                <RadioButton
                    android:id="@+id/q2a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a2"/>
                <RadioButton
                    android:id="@+id/q2a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a3"/>
                <RadioButton
                    android:id="@+id/q2a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a4"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/question_banner_text_size"
                android:layout_marginTop="@dimen/top_margins"
                android:text="@string/question3"/>
            <EditText
                android:id="@+id/q3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Antenna or Power"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/question_banner_text_size"
                android:layout_marginTop="@dimen/top_margins"
                android:text="@string/question4"/>
            <EditText
                android:id="@+id/q4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="It's a single object."/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Submit"
        android:onClick="submitTest"/>
</RelativeLayout>